Enhance obstacle creation with input validation and efficiency
Input validation was added to the obstacle creation process in the ObstacleListScene to ensure valid entries. The process was also optimized by directly extracting texts from text fields, avoiding the need for an intermediary method. These changes improve the robustness and efficiency of obstacle creation and editing.